SFDCProject/src/objects/Service_Transfer__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>An article type for documents relating to Customer Care&apos;s Service Transfer Team.</description>
    <fields>
        <fullName>Attachment1__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_4__c</fullName>
        <label>Attachment 4</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Talking_Points_and_Templates__c</fullName>
        <label>Talking Points and Templates</label>
        <type>TextArea</type>
    </fields>
    <label>Service Transfer</label>
    <pluralLabel>Service Transfers</pluralLabel>
</CustomObject>